--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-regex-extractor",
   "main": "./lib/atom-regex-extractor",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Atom package to extract search's results by regular expression as strings into a new file.",
   "keywords": [
   ],
   "activationCommands": {
